# datos-gob-es-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  GUION_DEMO.md  LICENSE  MANUAL_API_DATOS.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  server.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
core/: __init__.py  client.py  config.py  errors.py  exceptions.py  http.py  logging.py  ratelimit.py  utils.py
docs/: DEPLOYMENT.md  latency_report.md  test_report.md
examples/: 01_introduccion.ipynb  02_busqueda_datasets.ipynb  03_analisis_datos.ipynb  04_integraciones.ipynb  05_webhooks.ipynb  requirements.txt
integrations/: __init__.py  aemet.py  boe.py  ine.py
notifications/: __init__.py  watcher.py  webhook.py
prompts/: __init__.py  analisis_dataset.py  buscar_estadisticas.py  buscar_por_tema.py  datasets_recientes.py  explorar_catalogo.py  guia_herramientas.py
scripts/: latency_benchmark.py  test_tools_report.py
src/datos_gob_es_mcp/: __init__.py  client.py  models.py  server.py
tests/: __init__.py  conftest.py  test_client.py  test_core.py  test_improvements.py  test_integrations.py  test_models.py  test_notifications.py  test_prompts.py  test_resources.py  test_tools.py
