[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datos-gob-es-mcp"
version = "0.1.0"
description = "MCP server for querying the datos.gob.es open data catalog API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "datos-gob-es-mcp" }
]
keywords = ["mcp", "datos.gob.es", "open-data", "spain", "api", "catalog"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
